--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "aos": "^2.3.4",
+    "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.0.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^7.1.0",
     "hover.css": "^2.3.2",
@@ -72,6 +75,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react-burger-menu": "^2.8.3",
     "gh-pages": "^4.0.0",
     "svg-inline-loader": "^0.8.2"
